arts-3 Make documentation useful  - fixed some minor issues  - avoid flickering when changing theme

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,11 +1,17 @@
-$fg-color: #fff;
+$font-family: 'Roboto', "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
 $bg-color-theme-blue: blue;
 $bg-color-theme-green: darkgreen;
 $bg-color-theme-indigo: darkblue;
+$fg-color: #fff;
+
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
 
 body {
-  font-family: 'Roboto', "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: $font-family;
   margin: 0;
   font-size: 14px;
 }
